--- a/index.html
+++ b/index.html
@@ -6,41 +6,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shoe shop</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-
 <body>
     <div class="navbar">
         <h1>STYLUS</h1>
         <ul>
-            <a href="#home"><li>Home</li></a>
-            <a href="#contact"><li>About us</li></a>
-            <a href="#about"><li>Contact us</li></a>
+            <a href="#home">
+                <li>Home</li>
+            </a>
+            <a href="#contact">
+                <li>About us</li>
+            </a>
+            <a href="#about">
+                <li>Contact us</li>
+            </a>
+            <a href="" class="cart">
+                <i class="fa-solid fa-cart-shopping"></i>
+                <span id="cart-quantity">0</span>
+            </a>
+            <div class="Quantity"></div>
         </ul>
     </div>
     <div class="searchbar" id="home">
         <input placeholder="search for the products,brands and more">
     </div>
-   <h2>Products</h2>
-    <div class="dbox">
-        <div class="box1">
-            <img src="one.avif">
-            <p>ASIAN Men's Waterproof-05 Sports Running Shoes with Full Waterproof</p>
-        </div>
-        <div class="box1">
-            <img src="two.avif" height="190px">
-            <p>
-                Carnival-13 Men's High Top Casual Chunky Fashion
-            </p>
-        </div>
-        <div class="box1">
-            <img src="three.avif" width="190px" height="190px">
-            <p>Boy's VAYU-09 Sport Running & Walking Shoes with Lightweight</p>
-        </div>
-        <div class="box1">
-            <img src="four.avif" width="190px" height="190px">
-            <p>ASIAN Men's HATTRICK-53 Casual Sneaker Shoes for Men's & Boy's</p>
-        </div>
+    <h2>Products</h2>
+    
+<div class="dbox">
+    <div class="box1">
+        <img src="one.avif">
+        <p>ASIAN Men's Waterproof-05 Sports Running Shoes with Full Waterproof</p>
+        <p class="price">Price:₹500</p>
+        <button class="add-to-cart">Add to Cart</button>
     </div>
+    <div class="box1">
+        <img src="two.avif" height="190px">
+        <p>
+            Carnival-13 Men's High Top Casual Chunky Fashion
+        </p>
+        <p class="price">Price:₹800</p>
+        <button class="add-to-cart">Add to Cart</button>
+    </div>
+    <div class="box1">
+        <img src="three.avif" width="190px" height="190px">
+        <p>Boy's VAYU-09 Sport Running & Walking Shoes with Lightweight</p>
+        <p class="price">Price:₹400</p>
+        <button class="add-to-cart">Add to Cart</button>
+    </div>
+    <div class="box1">
+        <img src="four.avif" width="190px" height="190px">
+        <p>ASIAN Men's HATTRICK-53 Casual Sneaker Shoes for Men's & Boy's</p>
+        <p class="price">Price:₹300</p>
+        <button class="add-to-cart">Add to Cart</button>
+    </div>
+</div>
     <div class="about about1" id="contact">
         <h3>About us</h3>
     </div>
@@ -69,7 +91,29 @@
             <h4>venue:34/5 ,east bengal chennai-97</h4>
         </div>
     </div>
+    <script>  
+        const cartQuantityElement = document.getElementById('cart-quantity');
+        let cartQuantity = 0;
+        function updateCartQuantity() {
+            cartQuantityElement.textContent = cartQuantity.toString();
+        }
+        function incrementCartQuantity() {
+            cartQuantity++;
+            updateCartQuantity();
+        }
+        function decrementCartQuantity() {
+            if (cartQuantity > 0) {
+                cartQuantity--;
+                updateCartQuantity();
+            }
+        }
 
+        document.querySelectorAll('.add-to-cart').forEach((button) => {
+            button.addEventListener('click', () => {
+                incrementCartQuantity();
+            });
+        });
+    </script>
 </body>
 
 </html>
